# IoT

./: .gitignore
Ejercicio 1/: varios.c
Ejercicio 1/Ec2doG/: ecseggrad.c
Ejercicio 1/Inverse_array/: inverse_array.c
Ejercicio 1/Inverse_sting/: inverse_string.c
Ejercicio 1/Max_min/: max-min.c
Ejercicio 1/bin_a_dec/: bin_a_dec.c
Ejercicio 1/matrixsub/: matrixsub.c
Ejercicio 1/triangulos(ej5)/: ej5
Hola mundo/: Holamundo.c
Lab C/bin_2_dec/: bin2dec.c  tempCodeRunnerFile.c
Lab C/complex/: complex.c  complex.h  prod.c  prodNsum.c  sum.c
Lab C/consonantes_y_vocales/: conNvocs.c  conNvocs.h  cons.c
Lab_C/: CMakeLists.txt  Parte_2.c  README.md
Lab_C/Codigos/eq_solver/: eq_solver.c
Lab_C/Codigos/matrixsub/: matrixsub.c
Lab_C/Codigos/reverse_string/: reverse_string.c
Lab_C/Codigos/string_to/: string_to.c
Lab_C/Codigos/string_words/: string_words.c
Lab_C/Parte_1/: CMakeLists.txt  main.c
Lab_C/Parte_1/Codigos/aa_global/: global.h
Lab_C/Parte_1/Codigos/bin_2_dec/: bin2dec.c  bin2dec.h
Lab_C/Parte_1/Codigos/consonantes_y_vocales/: conNvocs.c
Lab_C/Parte_1/Codigos/days_left/: days_left.c  days_left.h
Lab_C/Parte_1/Codigos/find_in_strin/: find_in_sting.c
Lab_C/Parte_1/Codigos/inverse_array/: inverse_array.c
Lab_C/Parte_1/Codigos/matrixsub/: matrixsub.h
Lab_C/Parte_1/Codigos/max_min/: max-min.c
Lab_C/Parte_1/Codigos/string_to/: string_to.h
Lab_C/Parte_1/Codigos/string_words/: string_words.h
Lab_C/Parte_1/Codigos/swap/: swap.c
Lab_C/Parte_1/components/global/: CMakeLists.txt  global.c
Lab_C/Parte_1/include/: global.h
Lab_C/Parte_1/src/: conNvocs.c  main.c  string_copy.c  string_length.c  swap.c
Lab_C/Parte_2/: CMakeLists.txt
Lab_C/Parte_2/components/lista/: CMakeLists.txt  lista.c
Lab_C/Parte_2/components/lista/include/: lista.h
Lab_C/Parte_2/src/: main.c
Lab_C/src/: init_lab.c  max-min.c  string_to.c  string_words.c
Proyecto_Hola_Mundo/: CMakeLists.txt
Proyecto_Hola_Mundo/components/my_lib_1/: CMakeLists.txt  my_lib_1.c
Proyecto_Hola_Mundo/components/my_lib_1/include/: my_lib_1.h
Proyecto_Hola_Mundo/components/my_lib_2/: CMakeLists.txt  my_lib_2.c
Proyecto_Hola_Mundo/components/my_lib_2/include/: my_lib_2.h
Proyecto_Hola_Mundo/src/: main.c
global/: main.c
sizeof/: sizeof.c
(+39 files in other folders)
